# img2pm

./: .gitignore  CMakeLists.txt  LICENSE  README.md  img2pm.cpp
src/: conversion.cpp  conversion.hpp  img2pm.cpp
